--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "He Cheng's Homepage"
 title_separator          : "-"
 name                     : &name "He Cheng"
 description              : &description "personal description"
-url                      : "https://Serendipity618/Serendipity618.github.io"
+url                      : "https://serendipity618.github.io/"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "Serendipity618/Serendipity618.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "He Cheng"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : "Ph.D. Candidate, Department of Computer Science"
+  location         : "Utah State University"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
