--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "He Cheng's Homepage"
 title_separator          : "-"
 name                     : &name "He Cheng"
 description              : &description "personal description"
-url                      : "https://serendipity618.github.io/"
+url                      : "https://serendipity618.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Serendipity618/Serendipity618.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
