--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=zqYwQ5UAAAAJ&hl=en"
   email            : "he.cheng@usu.edu"
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/scientific-contributions/He-Cheng-2212339064"
   uri              :
   bitbucket        :
   codepen          :
