--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "He Cheng"
-  avatar           : "profile.png"
+  avatar           : "/assets/self.png"
   bio              : "Ph.D. Candidate, Department of Computer Science"
   location         : "Utah State University"
   employer         :
