--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /publications/
 
   - title: "Services"
-    url: /services/    
+    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
